# final_01

./: .gitignore  docker-compose.yml
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: health.py
backend/app/core/: config.py
backend/app/db/: dependencies.py  seed.py  session.py
backend/app/models/: __init__.py  category.py  community.py  feedback.py  point.py  promotion.py  report.py  service.py  user.py
backend/app/schemas/: health.py  url.py
backend/app/services/: openai_service.py  web_risk_service.py
backend/docs/: STRUCTURE.md
backend/tests/: conftest.py
docs/: API_SPEC.csv  Function_def.md  STRUCTURE.md  TABLE_DEF.csv  TECHSPEC.md  ai-data-roadmap.md  concept.md  phase1-plan.md
docs/team-plans/: ADMIN.md  CHJ.md  KEG.md  KHJ.md  PGI.md  PJB-step1-contract.md  PJB.md  README.md  cho-hyeonjeong.md  kim-eungyeong.md
frontend/: README.md  package-lock.json
frontend/docs/: STRUCTURE.md
frontend/src/: App.tsx
