[project]
name = "buildback-backend"
version = "0.1.0"
description = "BuildBack FastAPI backend"
requires-python = ">=3.10,<3.11"
dependencies = [
    "alembic>=1.16.2",
    "fastapi>=0.115.13",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
    "uvicorn[standard]>=0.34.3",
]

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
    "pytest>=8.4.1",
]
